--- a/templates/index.html
+++ b/templates/index.html
@@ -10,8 +10,12 @@
       <h3>You will receive a text message whenever the ISS flies by where you are right now.</h3>
       <h4>Enter your phone number: </h4>
       <input type="text" placeholder="ex: +19999999999" name="number">
+      <input type="hidden" name="latitude" id="latitude">
+      <input type="hidden" name="longitude" id="longitude">
+
       <button type="submit">Subscribe</button>
     </form>
   </div>
+  <script type="text/JavaScript" src="/static/getLocation.js"></script>
 </body>
 </html>
