--- a/iss/notifications/templates/notifications/index.html
+++ b/iss/notifications/templates/notifications/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <div id="app">
-    <form action="/subscribe" method="POST">
+    <form action="/notifications/subscribe/" method="POST">
       <h3>You will receive a text message whenever the ISS flies by where you are right now.</h3>
       <h4>Enter your phone number: </h4>
       <input type="text" placeholder="ex: +19999999999" name="number">
